# CminusfCompiler

./: .gitignore  CMakeLists.txt  README.md  autojudge.py
Documentations/common/: LightIR.md  cminusf.md
Documentations/lab1/: README.md
Documentations/lab2/: README.md
Documentations/lab3/: IR.md  README.md  核心类介绍.md
Documentations/lab4/: README.md
Documentations/lab5/: README.md
Reports/lab1/: report.md
Reports/lab2/: report.md
Reports/lab3/: report.md  team.txt
Reports/lab4/: contribution.md  eval_result  report.md
Reports/lab5/: contribution.md  report-phase1.md  report-phase2.md  score
include/: ast.hpp  lexical_analyzer.h
include/lightir/: BasicBlock.h  Constant.h  Function.h  IRBuilder.h  Instruction.h  Module.h  Type.h  User.h  Value.h
include/optimization/: ActiveVars.hpp  ConstPropagation.hpp  Dominators.h  Inline.hpp
src/: CMakeLists.txt
src/cminusfc/: CMakeLists.txt  cminusf_builder.cpp  cminusf_builder.self_impl.cpp  cminusfc.cpp  coverageTest.cpp
src/common/: CMakeLists.txt
src/lexer/: lexical_analyzer.l
src/lightir/: BasicBlock.cpp  Constant.cpp  Function.cpp  Instruction.cpp  Module.cpp  Type.cpp  User.cpp  Value.cpp
src/optimization/: ActiveVars.cpp  CMakeLists.txt  ConstPropagation.cpp  Dominators.cpp  Inline.cpp  LoopInvHoist.cpp  LoopSearch.cpp  Mem2Reg.cpp
src/parser/: lexical_analyzer.l  syntax_analyzer.y
tests/: CMakeLists.txt
tests/lab1/: LAB1_SCORE  main.c  test_lexer.py
tests/lab2/: main.c  test_syntax.sh
tests/lab3/: CMakeLists.txt
tests/lab5/: lab5_tests.py  test1.cminus
(+168 files in other folders)
